# image-tagger

./: .coverage  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
image_tagger/: __init__.py  __main__.py  config.py  settings_store.py
image_tagger/gui/: __init__.py  app.py  assets.py  main_window.py  workers.py
image_tagger/gui/widgets/: about_dialog.py  drop_target.py  progress_panel.py  settings_form.py
image_tagger/io/: __init__.py  metadata.py  yaml_sidecar.py
image_tagger/models/: __init__.py  base.py  blip.py  blip2.py  openclip.py  registry.py  vision_remote.py
image_tagger/models/builtin/: __init__.py  simple.py
image_tagger/services/: __init__.py  analyzer.py
image_tagger/utils/: __init__.py  devices.py  paths.py  text.py
tests/: test_cli_main.py  test_config.py  test_metadata_writer.py  test_models_blip.py  test_models_registry.py  test_services_analyzer.py  test_settings_store.py  test_sidecar_writer.py  test_utils_devices.py  test_utils_paths.py  test_utils_text.py  test_vision_remote.py
