[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-tagger"
version = "0.1.0"
description = "Cross-platform GUI app and library that tags and captions images using multiple AI models."
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.2",
  "piexif>=1.1.3",
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "pyside6>=6.6",
  "tqdm>=4.66",
  "numpy>=1.24",
  "typing_extensions>=4.8",
  "requests>=2.31",
]

[project.optional-dependencies]
clip = [
  "open-clip-torch>=2.24",
  "torch>=2.1",
  "torchvision>=0.16",
  "ftfy>=6.1.3",
  "regex>=2023.12.25",
]
blip = [
  "transformers>=4.39",
  "accelerate>=0.27",
  "torch>=2.1",
  "torchvision>=0.16",
  "sentencepiece>=0.1.99",
]
blip2 = [
  "transformers>=4.39",
  "accelerate>=0.27",
  "torch>=2.1",
  "torchvision>=0.16",
  "sentencepiece>=0.1.99",
  "bitsandbytes>=0.42",
  "safetensors>=0.4.2",
]
cuda = [
  "nvidia-cublas-cu12>=12.1.3.1",
  "nvidia-cuda-runtime-cu12>=12.1.105",
  "nvidia-cudnn-cu12>=9.1.0.70",
  "nvidia-cufft-cu12>=11.0.2.54",
  "nvidia-curand-cu12>=10.3.2.106",
  "nvidia-cusolver-cu12>=11.4.5.107",
  "nvidia-cusparse-cu12>=12.1.0.106",
  "nvidia-nccl-cu12>=2.19.3; sys_platform != \"win32\"",
  "nvidia-nvtx-cu12>=12.1.105",
]
onnx = ["onnxruntime", "onnx"]
full = ["image-tagger[clip,blip,blip2,cuda,onnx]"]

[project.urls]
Homepage = "https://example.com/image-tagger"
Repository = "https://example.com/image-tagger.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["image_tagger*"]
exclude = ["tests*", "resources*"]

[project.scripts]
image-tagger = "image_tagger.__main__:main"

[tool.coverage.run]
source = ["image_tagger"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
