[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-tagger"
version = "1.0.0"
description = "Cross-platform GUI app and library that tags and captions images using multiple AI models."
readme = "README.md"
authors = [
  { name = "Matthew Craig", email = "taggedzi.mpc@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.2",
  "piexif>=1.1.3",
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "pyside6>=6.6",
  "tqdm>=4.66",
  "numpy>=1.24",
  "typing_extensions>=4.8",
  "requests>=2.31",
]

[project.optional-dependencies]
blip = [
  "transformers>=4.39",
  "accelerate>=0.27",
  "torch>=2.1",
  "torchvision>=0.16",
  "sentencepiece>=0.1.99",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.4.1",
  "pycodestyle>=2.11",
  "coverage>=7.4",
]

[project.urls]
Homepage = "https://github.com/taggedzi/image-tagger"
Repository = "https://github.com/taggedzi/image-tagger"

[tool.setuptools.packages.find]
where = ["."]
include = ["image_tagger*"]
exclude = ["tests*", "resources*"]

[project.scripts]
image-tagger = "image_tagger.__main__:main"

[tool.coverage.run]
source = ["image_tagger"]
branch = true
omit = [
  "image_tagger/gui/*",
  "image_tagger/io/metadata.py",
  "image_tagger/models/blip.py",
  "image_tagger/models/vision_remote.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["image_tagger", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
